force-app/main/default/objects/Phone_Validation_Result__c/Phone_Validation_Result__c.object-meta.xml
<CustomObject>
    <label>Phone Validation Result</label>
    <nameField>
        <displayFormat>PVR-{0000}</displayFormat>
        <label>Phone Validation Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Phone Validation Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>