force-app/main/default/objects/Phone_Validation_Result__c/fields/API_Error__c.field-meta.xml
<CustomField>
    <fullName>API_Error__c</fullName>
    <label>API Error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>