force-app/main/default/objects/Phone_Validation_Result__c/fields/CountryPrefix__c.field-meta.xml
<CustomField>
    <fullName>CountryPrefix__c</fullName>
    <label>CountryPrefix</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>