force-app/main/default/objects/Phone_Validation_Result__c/fields/ErrorCause__c.field-meta.xml
<CustomField>
    <fullName>ErrorCause__c</fullName>
    <label>ErrorCause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>