force-app/main/default/objects/Phone_Validation_Result__c/fields/ErrorResolution__c.field-meta.xml
<CustomField>
    <fullName>ErrorResolution__c</fullName>
    <label>ErrorResolution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>