force-app/main/default/objects/Phone_Validation_Result__c/fields/IsValid__c.field-meta.xml
<CustomField>
    <fullName>IsValid__c</fullName>
    <label>IsValid</label>
    <length>5</length>
    <type>Text</type>
</CustomField>