force-app/main/default/objects/Phone_Validation_Result__c/fields/NationalFormat__c.field-meta.xml
<CustomField>
    <fullName>NationalFormat__c</fullName>
    <label>NationalFormat</label>
    <length>20</length>
    <type>Text</type>
</CustomField>