force-app/main/default/objects/Phone_Validation_Result__c/fields/NetworkName__c.field-meta.xml
<CustomField>
    <fullName>NetworkName__c</fullName>
    <label>NetworkName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>