force-app/main/default/objects/Phone_Validation_Result__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <label>Person</label>
    <referenceTo>Person__c</referenceTo>
    <relationshipLabel>Phone Validation Results</relationshipLabel>
    <relationshipName>Phone_Validation_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>