force-app/main/default/objects/Phone_Validation_Result__c/fields/ValidatedFieldName__c.field-meta.xml
<CustomField>
    <fullName>ValidatedFieldName__c</fullName>
    <label>ValidatedFieldName</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>