force-app/main/default/objects/Phone_Validation_Result__c/fields/ValidatedFieldValue__c.field-meta.xml
<CustomField>
    <fullName>ValidatedFieldValue__c</fullName>
    <label>ValidatedFieldValue</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>